# search-reranker

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
service/: __init__.py  api.py  logging_config.py  model.py  schemas.py
tests/: __init__.py  test_api.py  test_bm25.py  test_model.py  test_prepare_data.py
training/: __init__.py  bm25.py  evaluate.py  prepare_data.py  train.py
